--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     ]
   },
   "devDependencies": {
+    "axios": "^0.19.2",
     "gulp": "^4.0.2",
     "gulp-sass": "^4.0.2",
     "react-router-dom": "^5.1.2"
